edit text coloe

--- a/guideline.css
+++ b/guideline.css
@@ -119,7 +119,7 @@ html, body {
 }
 .content .button_green {
   background-color: #2E90B7;
-  color: #013353;
+  color: #FFF;
   border-color: #EE837D;
   font-weight: bold;
 }
